// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tags component should match Tags snapshot (user can't edit) 1`] = `
<div
  className="harvesting-tags-container"
>
  <label
    htmlFor="tags"
  >
    Tags
  </label>
  <div
    className="harvesting-tags-titles-container"
  >
    <div
      className="harvesting-tag-container"
    >
      <span
        className="harvesting-tag-title"
      >
        foo
      </span>
    </div>
    <div
      className="harvesting-tag-container"
    >
      <span
        className="harvesting-tag-title"
      >
        bar
      </span>
    </div>
  </div>
</div>
`;

exports[`Tags component should match Tags snapshot 1`] = `
<div
  className="harvesting-tags-container"
>
  <label
    htmlFor="tags"
  >
    Tags
  </label>
  <div
    className="harvesting-tags-titles-container"
  >
    <div
      className="harvesting-tag-container"
    >
      <span
        className="harvesting-tag-title"
      >
        foo
      </span>
      <div
        className="assembl-icon-cancel"
        onClick={[Function]}
      />
    </div>
    <div
      className="harvesting-tag-container"
    >
      <span
        className="harvesting-tag-title"
      >
        bar
      </span>
      <div
        className="assembl-icon-cancel"
        onClick={[Function]}
      />
    </div>
    <div
      className="harvesting-tags-edit"
      onClick={[Function]}
    >
      +
    </div>
  </div>
</div>
`;

exports[`Tags component should match Tags snapshot without initialValues 1`] = `
<div
  className="harvesting-tags-container"
>
  <label
    htmlFor="tags"
  >
    Tags
  </label>
  <div
    className="harvesting-tags-titles-container"
  >
    <div
      className="harvesting-tags-edit"
      onClick={[Function]}
    >
      +
    </div>
  </div>
</div>
`;
